# causal-field

./: CITATION.cff  LICENSE  README.md  SECURITY.md  SPEC.md  llms.txt  pyproject.toml
.github/workflows/: ci.yml
causal_field/: __init__.py  core.py
tests/: test_causal_field.py
